--- a/index.html
+++ b/index.html
@@ -49,26 +49,34 @@ To deliver reliable, transparent, and sustainable solutions in real estate, cons
              </p>
         </section>
         <section id="services" class="services">
-            <h2>Our Services</h2>
-            <div class="service-icons">
-    <div class="service-card" data-title="Real Estate Services" data-info="We help you buy, sell, and rent properties in Chhattisgarh with complete legal support.">
-        <img src="https://img.icons8.com/ios-filled/50/844D2C/home.png"/>
-        <p>Real Estate Services</p>
+    <h2>Our Services</h2>
+    <div class="service-icons">
+        <div>
+            <a href="real-estate.html">
+                <img src="https://img.icons8.com/ios-filled/50/844D2C/home.png"/>
+                <p>Real Estate Services</p>
+            </a>
+        </div>
+        <div>
+            <a href="construction.html">
+                <img src="https://img.icons8.com/ios-filled/50/844D2C/box.png"/>
+                <p>Construction Materials Supply</p>
+            </a>
+        </div>
+        <div>
+            <a href="documentation.html">
+                <img src="https://img.icons8.com/ios-filled/50/844D2C/document.png"/>
+                <p>Land Documentation Process</p>
+            </a>
+        </div>
+        <div>
+            <a href="consultation.html">
+                <img src="https://img.icons8.com/ios-filled/50/844D2C/survey.png"/>
+                <p>Personalized Property Consultation</p>
+            </a>
+        </div>
     </div>
-    <div class="service-card" data-title="Construction Materials Supply" data-info="We deliver high-quality construction materials like cement, steel, and sand across Chhattisgarh.">
-        <img src="https://img.icons8.com/ios-filled/50/844D2C/box.png"/>
-        <p>Construction Materials Supply</p>
-    </div>
-    <div class="service-card" data-title="Land Documentation Process" data-info="Our team handles registration, mutation, and all property-related documentation quickly and legally.">
-        <img src="https://img.icons8.com/ios-filled/50/844D2C/document.png"/>
-        <p>Land Documentation Process</p>
-    </div>
-    <div class="service-card" data-title="Property Consultation" data-info="We provide personalized advice to help you make the right property investments.">
-        <img src="https://img.icons8.com/ios-filled/50/844D2C/survey.png"/>
-        <p>Personalized Property Consultation</p>
-    </div>
-</div>
-        </section>
+</section>
         <section id="why" class="why">
             <h2>Why Choose Us?</h2>
             <div class="why-icons">
